# scm-chainguard

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.claude/skills/commit/: SKILL.md
.claude/skills/pre-commit/: SKILL.md
.claude/skills/python-best-practices/: SKILL.md
src/scm_chainguard/: __init__.py  cert_utils.py  cli.py  compare.py  config.py  logging_setup.py  models.py  panos_compat.py  pipeline.py  sync.py
src/scm_chainguard/ccadb/: client.py  parser.py
src/scm_chainguard/scm/: __init__.py  auth.py  identity_client.py  security_client.py
tests/: conftest.py  test_ccadb_client.py  test_ccadb_parser.py  test_cert_utils.py  test_cli.py  test_cli_commands.py  test_compare.py  test_config.py  test_extract_error.py  test_identity_client.py  test_logging_setup.py  test_models.py  test_panos_compat.py  test_pipeline.py  test_scm_auth.py  test_security_client.py  test_sync.py
