[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scm-chainguard"
dynamic = ["version"]
description = "Manage Chrome-trusted CA certificates in Palo Alto Strata Cloud Manager"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "requests>=2.31",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "mypy>=1.0",
]

[project.scripts]
scm-chainguard = "scm_chainguard.cli:app"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 192

[tool.ruff.lint]
select = ["E", "F", "W", "D"]
ignore = ["E203", "D100", "D101", "D102", "D104", "D105", "D107", "D400", "D415", "D417"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
