[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scm-chainguard"
dynamic = ["version"]
description = "Manage Chrome-trusted CA certificates in Palo Alto Strata Cloud Manager"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["palo-alto", "strata-cloud-manager", "ssl-decryption", "certificate", "ccadb", "chrome-root-store"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9",
    "requests>=2.31",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://gitlab.com/dephell/scm-chainguard"
Repository = "https://gitlab.com/dephell/scm-chainguard"
Issues = "https://gitlab.com/dephell/scm-chainguard/-/issues"
Changelog = "https://gitlab.com/dephell/scm-chainguard/-/releases"

[project.scripts]
scm-chainguard = "scm_chainguard.cli:app"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 192

[tool.ruff.lint]
select = ["E", "F", "W", "D"]
ignore = ["E203", "D100", "D101", "D102", "D104", "D105", "D107", "D400", "D415", "D417"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
